[gd_scene load_steps=2 format=2]

[ext_resource path="res://BasicUI.gd" type="Script" id=1]

[node name="Basic UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -174.5
margin_top = -116.0
margin_right = 174.5

[node name="Startbutton" type="Button" parent="VBoxContainer"]
margin_right = 349.0
margin_bottom = 20.0
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 349.0
margin_bottom = 44.0
text = "Options"

[node name="Lore" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 349.0
margin_bottom = 68.0
text = "Lore"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 349.0
margin_bottom = 92.0
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 349.0
margin_bottom = 116.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Startbutton" to="." method="_on_Start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Lore" to="." method="_on_Lore_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
